fixed row gap

--- a/src/components/pdfs/output.css
+++ b/src/components/pdfs/output.css
@@ -18,7 +18,7 @@ h1 {
   width: 210mm;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 2fr 3fr;
-  row-gap: 10px;
+  row-gap: 20px;
   column-gap: 4px;
 }
 
